--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -380,6 +380,20 @@
                         @if (User.IsInRole("admin"))
                         {
                             <li>
+                                <a href="#"><i class="fa fa-cube fa-fw"></i> Баннеры<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="@Url.Action(MVC.Banners.Index())"> Список баннеров</a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.BannerGroups.Index())"> Группы баннеров</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li>
                                 <a href="#"><i class="fa fa-wrench fa-fw"></i> Настройки<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
