--- a/GE.WebAdmin/Views/Banners/_FindGridView.cshtml
+++ b/GE.WebAdmin/Views/Banners/_FindGridView.cshtml
@@ -4,7 +4,7 @@
     var pagerInfo = ViewBag.PagerInfo;
     var filter = ViewBag.Filter != null ? (VMBanner)ViewBag.Filter : null;
     var sortDirections = ViewBag.Order != null ? (Dictionary<string, SxExtantions.SortDirection>)ViewBag.Order : null;
-    var banners = (VMBanner[])ViewBag.Banners;
+    var bannerGroupId = (Guid)ViewBag.BannerGroupId;
 }
 
 
@@ -15,23 +15,18 @@
             Data = Model,
             Columns = new SxExtantions.SxGridViewColumn<VMBanner>[]{
                 new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Id", Caption="Идентификатор"},
-                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Url", Caption="Адрес перехода", Template=(b)=> {
-                    return string.Format("<i class=\"fa fa-link\"></i>&nbsp;<a target=\"_blank\" href=\"{0}\">{0}</a>", b.Url);
-                } },
-                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Title", Caption="Заголовок"},
-                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="PictureId", Caption="Картинка", Template=(p)=> {
-                return string.Format("<a data-lightbox=\"roadtrip\" data-title=\"{1}\" data-toggle=\"tooltip\" data-placement=\"left\" title=\"Помотреть картинку\" href=\"{0}\"><i class=\"fa fa-picture-o\"></i></a>", Url.Action(MVC.Pictures.Picture(p.PictureId)), p.Title);
-            } }
+                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Url", Caption="Адрес перехода"},
+                new SxExtantions.SxGridViewColumn<VMBanner>{FieldName="Title", Caption="Заголовок"}
             },
             PagerInfo = pagerInfo,
             Filter = filter,
             SortDirections = sortDirections,
             EnableCreate = false,
             EnableEditing = false,
-            ShowSelectCheckbox=true,
-            FunCheckBoxName=(b)=>"banner",
-            FuncGetId=(b)=>b.Id,
-            FunCheckBoxTrue=(b)=> banners.SingleOrDefault(x=>x.Id==b.Id)!=null
+            Mode = SxExtantions.SxGridViewMode.Lookup,
+            FuncGetId =(b)=>b.Id,
+            FuncTextField=()=>"Id",
+            FuncDataUrl=()=>Url.Action(MVC.Banners.FindGridView(bgid: bannerGroupId))
         },
             new { @class = "table table-condensed table-bordered table-responsive table-striped" }
     )
