--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -380,7 +380,7 @@
                         @if (User.IsInRole("admin"))
                         {
                             <li>
-                                <a href="#"><i class="fa fa-cube fa-fw"></i> Баннеры<span class="fa arrow"></span></a>
+                                <a href="#"><i class="fa fa-cube fa-fw"></i> Монетизация<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
                                         <a href="@Url.Action(MVC.Banners.Index())"> Список баннеров</a>
