--- a/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
+++ b/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
@@ -43,7 +43,7 @@
             EnableEditing = false,
             EnableDelete = true,
             EnableCreate = false,
-            DeleteLink = Url.Action(MVC.MaterialTags.Delete()),
+            FuncDeleteLink =(mt) =>Url.Action("delete", "materialtags", new { mid=mt.Id, mct=mct }),
             PagerLink=string.Format("/materialtags/index?mid={0}&mct={1}", mid, mct)
         },
         new { @class = "table table-condensed table-bordered table-responsive table-striped" }
