--- a/GE.WebUI/Views/News/List.cshtml
+++ b/GE.WebUI/Views/News/List.cshtml
@@ -5,11 +5,16 @@
     ViewBag.Title = title ?? (ViewBag.Tag != null ? "Последние новости c тегом " + (string)ViewBag.Tag : "Новости");
     if (title == null && ViewBag.GameTitle != null)
     {
-        ViewBag.Title += " " + ViewBag.GameTitle;
+        ViewBag.Title="Последние новости по игре " + ViewBag.GameTitle;
     }
     ViewBag.H1 = h1 ?? (ViewBag.Tag!=null? "Новости тега "+ (string)ViewBag.Tag : ViewBag.Title);
     ViewBag.H1CssClass = "header";
     ViewBag.Description = ViewBag.Description ?? (ViewBag.Tag != null ? "На данной странице вы сможете найти абсолютно все новости и статьи, которые были написаны авторами нашего сайта по запросу "+ (string)ViewBag.Tag : null);
+    if(ViewBag.Description==null && ViewBag.GameTitle != null)
+    {
+        ViewBag.Description = "На данной странице вы сможете ознакомиться споследними новостями, которые были написаны авторами нашего сайта об игре " + ViewBag.GameTitle;
+    }
+    ViewBag.Keywords = ViewBag.Keywords ?? ViewBag.GameTitle ?? ViewBag.Tag;
 }
 
 @Html.Partial(MVC.Shared.Views._Breadcrumbs, (VMBreadcrumb[])ViewBag.Breadcrumbs)
