--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -274,6 +274,9 @@
                                     <li>
                                         <a href="@Url.Action(MVC.Users.Index())"><i class="fa fa-fw fa-users"></i> Пользователи</a>
                                     </li>
+                                    <li>
+                                        <a href="@Url.Action(MVC.Statistics.StatUserLogins())"><i class="fa fa-fw fa-sign-in"></i> Статистика входов</a>
+                                    </li>
                                 </ul>
                             </li>
                         }
