--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -21,8 +21,8 @@
                         <li><a href="#">Выбрать игру</a></li>
                         <li><a href="@Url.Action(MVC.News.List())">Почитать новости</a></li>
                         <li><a href="@Url.Action(MVC.Articles.List())">Почитать статьи</a></li>
-                        <li><a href="#">Посмотреть результаты/ самому поучаствовать в конкурсах</a></li>
-                        <li><a href="#">Почитать форум</a></li>
+                        @*<li><a href="#">Посмотреть результаты/ самому поучаствовать в конкурсах</a></li>
+                        <li><a href="#">Почитать форум</a></li>*@
                     </ul>
                 </li>
                 <li>
