--- a/GE.WebUI/Views/Shared/_Foreword.cshtml
+++ b/GE.WebUI/Views/Shared/_Foreword.cshtml
@@ -1,5 +1,5 @@
 ﻿@model GE.WebUI.Models.Abstract.VMDetailMaterial
-@{ 
+@{
     Layout = null;
 }
 
@@ -7,6 +7,12 @@
 <blockquote class="mat-fwd">
     <h2 class="ann">Аннотация</h2>
     <p class="fwd">@Model.Foreword</p>
-    <p>Дата публикации: <strong>@Model.DateOfPublication.ToString("dd.MM.yyyy")</strong><br /> Автор материала: <strong>@Model.UserNikName</strong> </p>
+    <p>
+        Дата публикации: <strong>@Model.DateOfPublication.ToString("dd.MM.yyyy")</strong>
+        <br />
+        Отредактировано: <strong>@Model.DateUpdate.ToString("dd.MM.yyyy hh:mm")</strong>
+        <br />
+        Автор материала: <strong>@Model.UserNikName</strong>
+    </p>
     @Html.Partial(MVC.Shared.Views._Share42, Model)
 </blockquote>
