--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -285,11 +285,12 @@
                             <li>
                                 <a href="javascript:void(0)"><i class="fa fa-crop fa-fw"></i> Мультимедиа<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
-
                                     <li>
                                         <a href="@Url.Action(MVC.Pictures.Index())"><i class="fa fa-image fa-fw"></i> Фото-контент</a>
                                     </li>
-
+                                    <li>
+                                        <a href="@Url.Action(MVC.Videos.Index())"><i class="fa fa-youtube fa-fw"></i> Видео сайта</a>
+                                    </li>
                                 </ul>
                             </li>
                         }
