--- a/GE.WebAdmin/Views/Videos/Edit.cshtml
+++ b/GE.WebAdmin/Views/Videos/Edit.cshtml
@@ -27,6 +27,11 @@
     @Html.EditorFor(x => x.Url, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите адрес видео" } })
     @Html.ValidationMessageFor(x => x.Url)
     <br />
+    @Html.LabelFor(x => x.SourceUrl, new { @class = "control-label" })
+    @Html.EditorFor(x => x.SourceUrl, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите источник видео" } })
+    <div class="text-info">Задается в случае размещения стороннего видео для соблюдения авторских прав</div>
+    @Html.ValidationMessageFor(x => x.SourceUrl)
+    <br />
     @Html.LabelFor(x => x.PictureId, new { @class = "control-label" })
     @Html.EditorFor(x => x.PictureId, new { htmlAttributes = new { @class = "form-control" } })
     @Html.ValidationMessageFor(x => x.PictureId)
