https://github.com/EugeneKormin/Game-exe/issues/166

--- a/GE.WebAdmin/Content/less/ps-tree.less
+++ b/GE.WebAdmin/Content/less/ps-tree.less
@@ -6,3 +6,13 @@
 .ps-tree{
     padding:0;
 }
+
+.ps-tree .panel-heading{
+    position:relative;
+}
+
+.ps-tree .btns{
+    position:absolute;
+    right: 15px;
+    top:0;
+}
