--- a/GE.WebAdmin/Views/ProjectSteps/Edit.cshtml
+++ b/GE.WebAdmin/Views/ProjectSteps/Edit.cshtml
@@ -37,6 +37,7 @@
     <br />
 
     <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
+    <a href="@Url.Action(MVC.ProjectSteps.Index())" class="btn btn-default">Назад</a>
 </form>
 
 @section scripts{
