--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -13,6 +13,7 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
     color: @color-black;
     background-color: @color-bg;
+    background-attachment:fixed !important;
 }
 
 .navbar{
