--- a/GE.WebAdmin/Views/ProjectSteps/DisplayTemplates/VMProjectStep.cshtml
+++ b/GE.WebAdmin/Views/ProjectSteps/DisplayTemplates/VMProjectStep.cshtml
@@ -1,16 +1,30 @@
 ﻿@model VMProjectStep
-@{ 
+@{
     Layout = null;
 }
-<div id="pstep-@Model.Id" class="panel panel-default">
-    <div class="panel-heading"><strong>@Model.Title</strong></div>
+<div id="pstep-@Model.Id" class="panel panel-@(Model.IsDone?"success":"default") spets" data-o-id="@Model.ParentStepId">
+    <div class="panel-heading">
+        <strong>@Model.Title</strong><br />
+        <span class="small"><abbr title="Дата создания">DC</abbr>: @Model.DateCreate</span><br />
+        <span class="small"><abbr title="Дата редактирования">DU</abbr>: @Model.DateUpdate</span>
+        <ul class="btns">
+            <li><a href="javascript:void(0)" data-toggle="tooltip" title="Переместить вверх" data-dir="up"><i class="fa fa-angle-up"></i></a></li>
+            <li><a href="javascript:void(0)" data-toggle="tooltip" title="Переместить вниз" data-dir="down"><i class="fa fa-angle-down"></i></a></li>
+        </ul>
+    </div>
     <div class="panel-body">
         <p>@Model.Foreword</p>
     </div>
     <div class="panel-footer">
-        <ul class="list-unstyles list-inline text-right">
+        <ul class="list-unstyles list-inline text-left">
             <li>
-                <a class="btn btn-xs btn-default" href="@Url.Action(MVC.ProjectSteps.Edit(id: Model.Id, pid: Model.ParentStepId))">Править</a>
+                <form method="post" action="@Url.Action(MVC.ProjectSteps.ReplaceDone(id: Model.Id, done: !Model.IsDone))">
+                    @Html.AntiForgeryToken()
+                    <button class="btn btn-xs btn-@(Model.IsDone?"danger":"success")">@(Model.IsDone ? "Отменить выполнение" : "Выполнить")</button>
+                </form>
+            </li>
+            <li>
+                <a class="btn btn-xs btn-primary" href="@Url.Action(MVC.ProjectSteps.Edit(id: Model.Id, pid: Model.ParentStepId))">Править</a>
             </li>
             <li>
                 <a class="btn btn-xs btn-default" href="@Url.Action(MVC.ProjectSteps.Edit(pid: Model.Id))">Добавить</a>
