--- a/GE.WebAdmin/Views/ProjectSteps/Index.cshtml
+++ b/GE.WebAdmin/Views/ProjectSteps/Index.cshtml
@@ -18,7 +18,49 @@
     @Html.SxTree(Model, new SxExtantions.SxTreeSettings<VMProjectStep>
 {
     FuncChildren = (s) => { return s.Steps; },
-    FuncContent = (s) => { return Html.DisplayFor(x=>s).ToString(); }
-}, new { @class="ps-tree"})
+    FuncContent = (s) => { return Html.DisplayFor(x => s).ToString(); }
+}, new { @class = "ps-tree" })
+}
+
+@section scripts{
+    <script type="text/javascript">
+        $(function () {
+            $('.btns a').on('click', function () {
+                replaceOrder(this);
+            });
+        });
+
+        function replaceOrder(step) {
+            $step = $(step);
+            $li = $step.closest('.panel').closest('li');
+            var osid = $step.closest('.panel').data('o-id');
+            var id = $step.closest('.panel').attr('id').replace('pstep-', '');
+            var dir = $step.data('dir') == 'up' ? true : false;
+            $.ajax({
+                method: 'post',
+                url: '/projectsteps/replaceorder',
+                data: { id: id, osid: osid, dir: dir },
+                success: function (data) {
+                    if(dir)
+                    {
+                        $prevli = $li.prev('li');
+                        if ($prevli.length == 1) {
+                            var oldhtml = $prevli.html();
+                            $prevli.html($li.html());
+                            $li.html(oldhtml);
+                        }
+                    }
+                    else {
+                        $nextli = $li.next('li');
+                        if ($nextli.length == 1) {
+                            var oldhtml = $nextli.html();
+                            $nextli.html($li.html());
+                            $li.html(oldhtml);
+                        }
+                    }
+                }
+            });
+        }
+    </script>
 }
 
