--- a/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
+++ b/GE.WebUI/Views/News/DisplayTemplates/News.cshtml
@@ -17,7 +17,7 @@
         <figure class="mat-f-p">
             @if (Model.FrontPictureId != null)
             {
-                <img alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)picureId, width: 570))" />
+                <img alt="@Model.Title" src="@Url.Action(MVC.Pictures.Picture((Guid)picureId, height: 300))" />
             }
             else
             {
